--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Text about my cool site" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://reetipd.github.io/portfolio/404.html" /><meta property="og:site_name" content="Reeti Pradhananga" />
+<meta property="og:url" content="https://reetipd.github.io/404.html" /><meta property="og:site_name" content="Reeti Pradhananga" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
