--- a/gallery/index.html
+++ b/gallery/index.html
@@ -31,7 +31,7 @@
 <meta property="og:title" content="" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://reetipd.github.io/portfolio/gallery/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://reetipd.github.io/gallery/" /><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Reeti Pradhananga" />
 
