--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta property="og:title" content="Reeti Pradhananga" />
 <meta property="og:description" content="Text about my cool site" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://reetipd.github.io/portfolio/" /><meta property="og:site_name" content="Reeti Pradhananga" />
+<meta property="og:url" content="https://reetipd.github.io/" /><meta property="og:site_name" content="Reeti Pradhananga" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Reeti Pradhananga"/>
