--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Reeti Pradhananga
                     I am a software developer.
                 </h3>
                 <p class="hero-content">
-                    A passionate software developer to turn lines of code into remarkable software products. I thrive on creating user-centric applications that function flawlessly.
+                    A passionate software developer to turn lines of code into remarkable software products. I thrive on creating user-centric applications that function flawlessly. Additionally, I am interested in machine learning and data science.
                 </p>
                 <div class="row">
                     <div class="col-auto h-100">
