--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ Reeti Pradhananga
                             <div class="contact-details mt-4">
                                 <div class="contact-item mb-2">
                                     <i class="fas fa-envelope me-2"></i>
-                                    <a href="mailto:reetipradhananga@gmail.com">reetipradhananga@gmail.com</a>
+                                    <a href="mailto:pradhanangareeti@gmail.com">reetipradhananga@gmail.com</a>
                                 </div>
                                 <div class="contact-item mb-2">
                                     <i class="fas fa-map-marker-alt me-2"></i>
