updated some contents

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ Reeti Pradhananga
                     <!-- Work Experience Item 1 -->
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2025 - Present</div>
+                        <div class="timeline-date">2025</div>
                         <div class="timeline-content">
                             <h4>Graduate Research Assistant</h4>
                             <h5>University of Louisiana at Lafayette</h5>
@@ -662,7 +662,7 @@ Reeti Pradhananga
                     <!-- Work Experience Item 3 -->
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2022 - 2023</div>
+                        <div class="timeline-date">2021 - 2023</div>
                         <div class="timeline-content">
                             <h4>Software Engineer</h4>
                             <h5>RARA Labs</h5>
@@ -694,6 +694,25 @@ Reeti Pradhananga
     <div class="container">
         <h3 class="text-center">Projects</h3>
         <div class="row justify-content-center px-3 px-md-5">
+
+            <div class="col-lg-4 col-md-6 my-2 project-item">
+                <div class="project-card" title="Traffic Frame Prediction">
+                    <div class="project-content">
+                        <h5 class="project-title mt-1">Traffic Frame Prediction</h5>
+                        <div class="pb-2">
+                            <span class="badge badge-secondary">Python</span>
+                            <span class="badge badge-secondary">PyTorch</span>
+                            <span class="badge badge-secondary">TensorFlow</span>
+                            <span class="badge badge-secondary">OpenCV</span>
+                            <span class="badge badge-secondary">SUMO</span>
+                            <span class="badge badge-secondary">NumPy</span>
+                        </div>
+                        <div class="card-text secondary-font">
+                            Advanced traffic frame prediction system using deep learning architectures. Implemented CONVLSTM networks for spatiotemporal traffic pattern prediction, CNN-based future frame prediction models, and frame aggregation techniques. Integrated with SUMO simulator for realistic traffic scenario generation and validation, enabling real-time traffic analysis and prediction.
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 my-2 project-item">
                 <div class="project-card" title="Data Analysis Dashboard">
