--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Reeti Pradhananga
 </span></div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-4">
+            <!-- <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-md-9 pt-5 image animate px-5 px-md-5 px-lg-0 text-center">
                         <img src="/images/reeti.png"
@@ -372,7 +372,7 @@ Reeti Pradhananga
                         >
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     
